--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "prettier": "3.7.4"
   }
 }
